<resources>
    <string name="app_name">Pampanga Flood Watch</string>

    <!-- UTILS STRING -->
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="loading">loading &#8320;</string>
    <string name="app_exit">Do you really want to exit?</string>

    <!-- DRAWER STRINGS -->
    <string name="drawer_weather">Online Weather</string>
    <string name="drawer_municipalities">Municipalities</string>
    <string name="drawer_floodhistory">Flood History</string>
    <string name="drawer_about">About</string>
    <string name="drawer_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
